turtleart.lessons.turtleart.Main.Square.scala.error
Source:3: error: ':' expected but ')' found.
	def cote(i) = {
                  ^Source:11: error: identifier expected but '}' found.
}
^